cka/network_services_authorization_rbac/network/yamls_labs/default_deny_allo_egress_all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-egress
spec:
  podSelector: {} #Todos os pods
  policyTypes:
  - Egress #Pra toda a saída, o pod vai ficar isolado na saída.
