cka/network_services_authorization_rbac/network/yamls_labs/network_policy_egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-pod-c
spec:
  podSelector:
    matchLabels:
      run: pod-c
  policyTypes:
  - Egress
  egress:
  - to:
    #Essa lista tem o seguinte comportamento:
    #liberar somente o tráfego de saída para os pods/service com a label pod-a
    - podSelector:
        matchLabels:
          run: pod-a
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
