cka/network_services_authorization_rbac/network/yamls_labs/network_policy_pod_selector_namespace_selector_operador_and.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-pod-c
spec:
  podSelector:
    matchLabels:
      run: pod-c
  policyTypes:
  - Ingress
  ingress:
  - from:
    #Essa lista tem o seguinte comportamento:
    - podSelector:
        matchLabels:
          run: full-pod-a
      namespaceSelector:
        matchLabels:
          acesso: liberado
      #Se as regras estiverem na mesma lista vai ter o comportamento de AND e não de OR
    ports:
    - protocol: TCP
      port: 80
